--- a/style/style.css
+++ b/style/style.css
@@ -453,6 +453,18 @@ blockquote {
 	border-left: 2px solid green;
 }
 
+/* ***************** course content : stroke order diagram *********** */
+
+.sod {
+	float: right;
+	margin-top: -10px;
+}
+
+.sod img {
+	margin-left: 30px;
+	height: 80px;
+}
+
 /* ************* furigana ************** */
 
 .furi {
